--- a/PAGES/7a_introToPerformace/index.html
+++ b/PAGES/7a_introToPerformace/index.html
@@ -1717,6 +1717,10 @@ color: white;
 
   
 
+  
+
+  
+
 
 
 
@@ -1987,26 +1991,26 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
 <p>Julia has been praised as solving the &quot;two-language problem&quot;, defined as the difficulty of finding a language that is fast, but also easy to read and write. While it&#39;s true that Julia has some advantages relative to other languages, claims like this can be quite misleading for someone new to programming—it wrongly suggests that Julia is the only language you&#39;ll need to learn, regardless of the subject to code.</p>
-<p>In reality, each language excels in some area and has been designed with one purpose in mind. It&#39;s quite likely that you&#39;ll need to use a couple of programming languages, even if you focus on a narrow topic. I, for one, tend to use Julia as my main language for data analysis, but complement it with libraries from R and Python. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> Julia has the capacity of calling programs from other software such as R or Python. Python and R also have this feature.  </span></span></p>
-<p>Furthermore, getting the best performance in any language is not immediate. It requires you to write code appropriately. The approach for doing this tends to be software-specific and involves several trade-offs. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> This partially explains why benchmarks on the internet commonly throw disparate results. Some code could be written extremely inefficient in one language, and pretty optimized in another. Moreover, since each language is especially good at performing some tasks, it&#39;s possible to cherry-pick cases to show that the writer&#39;s advocated choice is the fastest option.  </span></span>  Thus, the claim that &quot;Julia is fast&quot; should be replaced by &quot;Julia  <em> can</em> be fast.&quot;  Next, we indicate some steps to achieve high performance. They constitute very basic rules, thus acting as the starting point for further optimizations.</p>
+<p>In reality, each language excels in some area and has been designed with one purpose in mind. It&#39;s quite likely that you&#39;ll need to use a couple of programming languages, even if you focus on a narrow topic. This is particularly true in data analysis, where packages implementing specific tasks may be only available in one language. I, for one, tend to use Julia as my main language for data analysis, but complement it with libraries from R and Python when the tasks require it. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> Julia has the capacity of calling programs from other software such as R or Python. Python and R also have this feature.  </span></span></p>
+<p>Getting the best performance in any language is also not immediate. It requires you to write code appropriately. The approach for doing this tends to be software-specific and involves several trade-offs. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> This partially explains why benchmarks on the internet commonly throw disparate results. Some code could be written extremely inefficient in one language, and pretty optimized in another. Moreover, since each language is especially good at performing some tasks, it&#39;s possible to cherry-pick cases to show that the writer&#39;s advocated choice is the fastest option.  </span></span>  Overall, the claim that &quot;Julia is fast&quot; should be replaced by &quot;Julia  <em> can</em> be fast.&quot;  Next, we indicate some steps to achieve high performance. They constitute very basic rules, thus acting as the starting point for further optimizations.</p>
 <p>      </div>
     </div>
   </div>
 </section>
-<section id="when_should_we_care_about_speed" class="scrollspy">
+<section id="when_should_we_care_about_speed" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>When Should We Care About Speed?</h2></p>
-<p>While speed is an important aspect of coding, it&#39;s not the sole factor to consider. In fact, speeding up code often comes with trade-offs. Firstly, it demands rewriting parts of the script, potentially resulting in the addition of multiple lines and compromising its readability.</p>
-<p>Second, speeding up code is time-consuming: it requires extensive testing, the identification of bottlenecks, and adapting code for the application of external packages. Given this, assess your goals before embarking on any optimization efforts. Think that <strong> most of YOUR time will be spent on writing, reading, and debugging code</strong>—reducing the computer&#39;s time by one second may not be worthwhile. Moreover, even if speed constitutes a crucial aspect of your project, you should still prioritize which code blocks to optimize. Typically, most tasks have a negligible effect on performance, with only a few critically determining its runtime.</p>
-<p>With these caveats in mind, the suggestions we present serve a dual purpose. First, they represent essential rules that shouldn&#39;t be overlooked—not following them could critically hurt performance, vanishing away any advantage of using Julia. Second, several of the tips considered have a minimal impact on code&#39;s readability, if any. Overall, most of the rules we present can help unlock Julia&#39;s speed, without sacrificing code quality or entailing much additional work. </p>
+<p>While speed is an important aspect of coding, it&#39;s not the sole factor to consider. In fact, speeding up code often comes with trade-offs. Firstly, it demands rewriting parts of the script, potentially increasing the code&#39;s length and compromising its readability.</p>
+<p>Second, speeding up code is time-consuming: it requires extensive testing, identifying bottlenecks, and adapting code for the application of external packages. Given this, assess your goals before embarking on any optimization efforts. Think that <strong> most of YOUR time will be spent on writing, reading, and debugging code</strong>—reducing the computer&#39;s time by one second may not be worthwhile. Moreover, even if speed constitutes a crucial aspect of your project, you should still prioritize which code blocks to optimize. Typically, most tasks have a negligible effect on performance, and only a few critically determine its runtime.</p>
+<p>With these caveats in mind, the suggestions we present in the following chapters serve a dual purpose. First, they represent essential rules that can&#39;t be avoided if you care about speed—not following them would critically hurt performance, vanishing away any advantage of using Julia. Second, several of the tips considered have a minimal impact on code&#39;s readability, if any. Overall, most of the rules we present are able to help unlock Julia&#39;s speed, without sacrificing code quality or entailing much additional work. </p>
 <p>      </div>
     </div>
   </div>
@@ -2019,7 +2023,7 @@ color: white;
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\7b0_measuringTime" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified January 12, 2024 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified January 18, 2024 </span>  
   </div>
 <!-- </p>  -->
 </footer>
