--- a/PAGES/7b01_preliminaries_stability/index.html
+++ b/PAGES/7b01_preliminaries_stability/index.html
@@ -1717,6 +1717,10 @@ color: white;
 
   
 
+  
+
+  
+
 
 
 
@@ -1987,18 +1991,18 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>We&#39;ll focus on two key aspects of performance: type stability and memory allocation. While there are other aspects to consider for performance, they&#39;re the most basic ones. </p>
-<p>The focus on this section is in particular on ensuring type stability. This requires wrapping the task to be executed in a function, so that Julia is able to identify each variable&#39;s concrete type and specialize. <strong> Any attempt to generate fast code without ensuring type stability is doomed to fail</strong>, making type stability essential for performance.</p>
+<p>We&#39;ll focus on two key aspects of performance: type stability and reductions in memory allocation. While there are other aspects to consider for performance, these are the most basic ones. </p>
+<p>This section focuses in particular on type stability. <strong> Any attempt to generate fast code without ensuring type stability is doomed to fail</strong>, making type stability essential for performance. A necessary condition to achieve type stability is to wrap the task in a function, so that Julia is able to identify each variable&#39;s concrete type and specialize. However, this is only a necessary condition.</p>
 <p>      </div>
     </div>
   </div>
 </section>
-<section id="type-annotating_variables" class="scrollspy">
+<section id="type-annotating_variables" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2041,7 +2045,7 @@ d::T where T&lt;:Any &#61; 2</code></pre>
     </div>
   </div>
 </section>
-<section id="multiple_dispatch_and_compilation" class="scrollspy section-bg-color">
+<section id="multiple_dispatch_and_compilation" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2077,7 +2081,7 @@ foo&#40;x::Float64, y::Float64&#41; &#61; x * y</code></pre>
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\7b1_performanceBasics" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified January 12, 2024 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified January 18, 2024 </span>  
   </div>
 <!-- </p>  -->
 </footer>
