--- a/PAGES/7c_gotchas/index.html
+++ b/PAGES/7c_gotchas/index.html
@@ -1717,6 +1717,10 @@ color: white;
 
   
 
+  
+
+  
+
 
 
 
@@ -1987,7 +1991,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -1997,7 +2001,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="gotcha_1_integers_and_floats" class="scrollspy section-bg-color">
+<section id="gotcha_1_integers_and_floats" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2034,7 +2038,7 @@ end
     </div>
   </div>
 </section>
-<section id="gotcha_2_collections_of_collections" class="scrollspy">
+<section id="gotcha_2_collections_of_collections" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2078,7 +2082,7 @@ foo&#40;data&#41; &#61; operation&#33;&#40;data&#91;2&#93;&#41;
     </div>
   </div>
 </section>
-<section id="gotcha_3_barrier_functions" class="scrollspy section-bg-color">
+<section id="gotcha_3_barrier_functions" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2136,7 +2140,7 @@ foo&#40;data&#41; &#61; operation&#33;&#40;data&#91;2&#93;&#41;
     </div>
   </div>
 </section>
-<section id="gotcha_4_inference_is_by_type_not_by_value" class="scrollspy">
+<section id="gotcha_4_inference_is_by_type_not_by_value" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2252,7 +2256,7 @@ end
     </div>
   </div>
 </section>
-<section id="gotcha_5_global_variables_as_default_values_of_keyword_arguments" class="scrollspy section-bg-color">
+<section id="gotcha_5_global_variables_as_default_values_of_keyword_arguments" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2321,7 +2325,7 @@ foo&#40;x; y &#61; 2*x&#41; &#61; x * y
     </div>
   </div>
 </section>
-<section id="gotcha_6_closures_can_easily_introduce_type_instabilities" class="scrollspy">
+<section id="gotcha_6_closures_can_easily_introduce_type_instabilities" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2746,7 +2750,7 @@ end
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\8a_allocations" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified January 12, 2024 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified January 18, 2024 </span>  
   </div>
 <!-- </p>  -->
 </footer>
