--- a/PAGES/8b3_reductions/index.html
+++ b/PAGES/8b3_reductions/index.html
@@ -1717,6 +1717,10 @@ color: white;
 
   
 
+  
+
+  
+
 
 
 
@@ -1987,7 +1991,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -1998,7 +2002,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="reductions_via_for-loops" class="scrollspy section-bg-color">
+<section id="reductions_via_for-loops" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2088,7 +2092,7 @@ end
     </div>
   </div>
 </section>
-<section id="reductions_via_functions" class="scrollspy">
+<section id="reductions_via_functions" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2174,7 +2178,7 @@ foo&#40;x,y&#41; &#61; prod&#40;a -&gt; a&#91;1&#93; * a&#91;2&#93;, zip&#40;x,y
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\8c_staticVectors" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified January 12, 2024 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified January 18, 2024 </span>  
   </div>
 <!-- </p>  -->
 </footer>
