--- a/PAGES/7b1_performanceBasics/index.html
+++ b/PAGES/7b1_performanceBasics/index.html
@@ -1717,6 +1717,10 @@ color: white;
 
   
 
+  
+
+  
+
 
 
 
@@ -1987,7 +1991,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="type_stability" class="scrollspy section-bg-color">
+<section id="type_stability" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2060,7 +2064,7 @@ end</code></pre>
     </div>
   </div>
 </section>
-<section id="yellow_and_red_warnings" class="scrollspy">
+<section id="yellow_and_red_warnings" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2134,7 +2138,7 @@ end</code></pre>
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\7b2_fixes_stability" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified January 12, 2024 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified January 18, 2024 </span>  
   </div>
 <!-- </p>  -->
 </footer>
