--- a/PAGES/8b2_preallocations/index.html
+++ b/PAGES/8b2_preallocations/index.html
@@ -1717,6 +1717,10 @@ color: white;
 
   
 
+  
+
+  
+
 
 
 
@@ -1987,7 +1991,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -1998,7 +2002,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="initializing_vectors" class="scrollspy section-bg-color">
+<section id="initializing_vectors" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2144,7 +2148,7 @@ end
     </div>
   </div>
 </section>
-<section id="pre-allocating_vectors_in_nested_for-loops" class="scrollspy">
+<section id="pre-allocating_vectors_in_nested_for-loops" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2325,7 +2329,7 @@ calling_foo_in_a_loop&#40;output,x&#41; &#61; &#91;sum&#40;foo&#33;&#40;output,x
     </div>
   </div>
 </section>
-<section id="pre-allocations_and_intermediate_steps" class="scrollspy section-bg-color">
+<section id="pre-allocations_and_intermediate_steps" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2543,7 +2547,7 @@ calling_foo_in_a_loop&#40;x, output, temp&#41; &#61; &#91;foo&#33;&#40;x, output
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\8b3_reductions" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified January 12, 2024 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified January 18, 2024 </span>  
   </div>
 <!-- </p>  -->
 </footer>
