--- a/index.html
+++ b/index.html
@@ -1703,7 +1703,7 @@ section{
   
 
 
-    <h1>Julia As Your First Programming Language</h1>            
+    <h1>Julia As Your First Programming Language: <br> A Book for Scientists and Non-Programmers</h1>            
     <div class="lead"> </div>
     
     
@@ -1964,7 +1964,7 @@ section{
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\1a_installation" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified January 12, 2024 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified January 18, 2024 </span>  
   </div>
 <!-- </p>  -->
 </footer>
