--- a/PAGES/7b1_performanceBasics/index.html
+++ b/PAGES/7b1_performanceBasics/index.html
@@ -1721,6 +1721,8 @@ color: white;
 
   
 
+  
+
 
 
 
@@ -1991,7 +1993,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="type_stability" class="scrollspy">
+<section id="type_stability" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2064,7 +2066,7 @@ end</code></pre>
     </div>
   </div>
 </section>
-<section id="yellow_and_red_warnings" class="scrollspy section-bg-color">
+<section id="yellow_and_red_warnings" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
