--- a/PAGES/3b2_strings/index.html
+++ b/PAGES/3b2_strings/index.html
@@ -1887,6 +1887,8 @@ color: white;
 
   
 
+  
+
 
 
 <style>
@@ -2044,7 +2046,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2054,7 +2056,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="characters" class="scrollspy section-bg-color">
+<section id="characters" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2081,7 +2083,7 @@ z  &#61; &#39;🐒&#39;       # z equals the character 🐒</code></pre>
     </div>
   </div>
 </section>
-<section id="strings" class="scrollspy">
+<section id="strings" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2096,7 +2098,7 @@ x &#61; &quot;&quot;&quot;Hello, beautiful world&quot;&quot;&quot;</code></pre>
     </div>
   </div>
 </section>
-<section id="string_interpolation" class="scrollspy section-bg-color">
+<section id="string_interpolation" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2138,7 +2140,7 @@ x &#61; &quot;Last year, Messi scored &#36;&#40;number_matches * goals_per_match
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\3c_arrays" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified April 2, 2024 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified April 3, 2024 </span>  
   </div>
 <!-- </p>  -->
 </footer>
