--- a/PAGES/3a_variables/index.html
+++ b/PAGES/3a_variables/index.html
@@ -1887,6 +1887,8 @@ color: white;
 
   
 
+  
+
 
 
 <style>
@@ -2044,7 +2046,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2054,7 +2056,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="creating_variables" class="scrollspy">
+<section id="creating_variables" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2128,7 +2130,7 @@ x -&#61; 3        # equivalent</code></pre>
     </div>
   </div>
 </section>
-<section id="what_are_variables" class="scrollspy section-bg-color">
+<section id="what_are_variables" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2144,7 +2146,7 @@ x -&#61; 3        # equivalent</code></pre>
     </div>
   </div>
 </section>
-<section id="types" class="scrollspy">
+<section id="types" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2169,7 +2171,7 @@ x -&#61; 3        # equivalent</code></pre>
     </div>
   </div>
 </section>
-<section id="operators" class="scrollspy section-bg-color">
+<section id="operators" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2201,7 +2203,7 @@ x -&#61; 3        # equivalent</code></pre>
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\3b_univariables" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified April 2, 2024 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified April 3, 2024 </span>  
   </div>
 <!-- </p>  -->
 </footer>
