--- a/PAGES/3d_mutation/index.html
+++ b/PAGES/3d_mutation/index.html
@@ -1887,6 +1887,8 @@ color: white;
 
   
 
+  
+
 
 
 <style>
@@ -2044,7 +2046,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2055,7 +2057,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="some_background" class="scrollspy section-bg-color">
+<section id="some_background" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2078,7 +2080,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="assignments" class="scrollspy">
+<section id="assignments" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2092,7 +2094,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="mutations" class="scrollspy section-bg-color">
+<section id="mutations" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2128,7 +2130,7 @@ x&#91;:&#93; &#61;  &#91;0,0&#93;</code></pre>
     </div>
   </div>
 </section>
-<section id="alias_vs_copy" class="scrollspy">
+<section id="alias_vs_copy" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2219,7 +2221,7 @@ x&#91;1&#93; &#61;  0</code></pre>
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\6a0_slices" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified April 2, 2024 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified April 3, 2024 </span>  
   </div>
 <!-- </p>  -->
 </footer>
