--- a/PAGES/4b_scope/index.html
+++ b/PAGES/4b_scope/index.html
@@ -1887,6 +1887,8 @@ color: white;
 
   
 
+  
+
 
 
 <style>
@@ -2044,7 +2046,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2062,7 +2064,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="global_and_local_variables" class="scrollspy section-bg-color">
+<section id="global_and_local_variables" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2110,7 +2112,7 @@ end</code></pre>
     </div>
   </div>
 </section>
-<section id="the_role_of_functions" class="scrollspy">
+<section id="the_role_of_functions" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2156,7 +2158,7 @@ y          &#61; double&#40;x&#41;</code></pre>
     </div>
   </div>
 </section>
-<section id="recommendations_for_the_use_of_functions" class="scrollspy section-bg-color">
+<section id="recommendations_for_the_use_of_functions" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2322,7 +2324,7 @@ expenditure_iPhones &#61; expenditure&#40;gross_value, tax_paid&#41;</code></pre
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\4d_vectorizing" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified April 2, 2024 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified April 3, 2024 </span>  
   </div>
 <!-- </p>  -->
 </footer>
