--- a/PAGES/5c_forLoops/index.html
+++ b/PAGES/5c_forLoops/index.html
@@ -1887,6 +1887,8 @@ color: white;
 
   
 
+  
+
 
 
 <style>
@@ -2044,7 +2046,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2118,7 +2120,7 @@ end</code></pre>
     </div>
   </div>
 </section>
-<section id="iterating_over_indices" class="scrollspy">
+<section id="iterating_over_indices" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2257,7 +2259,7 @@ end</code></pre>
     </div>
   </div>
 </section>
-<section id="rules_for_variable_scope_in_for-loops" class="scrollspy section-bg-color">
+<section id="rules_for_variable_scope_in_for-loops" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2336,7 +2338,7 @@ end</code></pre>
     </div>
   </div>
 </section>
-<section id="array_comprehensions" class="scrollspy">
+<section id="array_comprehensions" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2391,7 +2393,7 @@ y      &#61; &#91;foo&#40;a&#41; for a in x&#93;          # or y &#61; &#91;foo&
     </div>
   </div>
 </section>
-<section id="multiple_iterations" class="scrollspy section-bg-color">
+<section id="multiple_iterations" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2488,7 +2490,7 @@ y &#61; &#91;index * value for &#40;index,value&#41; in enumerate&#40;x&#41;&#93
     </div>
   </div>
 </section>
-<section id="iterating_over_functions" class="scrollspy">
+<section id="iterating_over_functions" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2518,7 +2520,7 @@ descriptive&#40;vector,list&#41; &#61; &#91;foo&#40;vector&#41; for foo in list&
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\overview_4" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified April 2, 2024 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified April 3, 2024 </span>  
   </div>
 <!-- </p>  -->
 </footer>
